Sugestoes da defesa de tese. FIM

--- a/resumos/resumo-en.tex
+++ b/resumos/resumo-en.tex
@@ -6,8 +6,8 @@
 \documentclass[9pt,a4paper]{extarticle}
 
 %% English version: comment first, uncomment second
-\usepackage[portuguese]{babel}  % Portuguese
-%\usepackage[english]{babel}     % English
+%\usepackage[portuguese]{babel}  % Portuguese
+\usepackage[english]{babel}     % English
 \usepackage{graphicx}           % images .png or .pdf w/ pdflatex OR .eps w/ latex
 \usepackage{times}              % use Times type-1 fonts
 \usepackage[utf8]{inputenc}     % 8 bits using UTF-8
