--- a/tables_sub_space_subgoal.tex
+++ b/tables_sub_space_subgoal.tex
@@ -5,7 +5,7 @@
    \hline
     \hline
     \multicolumn{2}{c|}{\multirow{2}{*}{\normalsize{\textbf{Data}}}} & \multicolumn{3}{c}{\normalsize{\textbf{YapTab}}} \\
-     \multicolumn{2}{c|}{} & \textit{\small{Var}} & \textit{\small{Sub}} & \textit{\small{Ratio}} \\
+     \multicolumn{2}{c|}{} & \textit{\small{Var}} & \textit{\small{Sub}} & \textit{\small{Sub / Var}} \\
    \hline
    \hline
 
